--- a/package.json
+++ b/package.json
@@ -1,51 +1,38 @@
 {
   "name": "minimize",
-  "version": "2.1.0",
-  "description": "The Minimize theme for the Genesis Framework.",
-  "main": "gulpfile.js",
-  "dependencies": {
-    "autoprefixer": "^6.3.1",
-    "browser-sync": "*",
-    "css-mqpacker": "*",
-    "fs": "0.0.1-security",
-    "gulp": "*",
-    "gulp-autoprefixer": "*",
-    "gulp-cached": "*",
-    "gulp-clean-css": "^3.9.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssbeautify": "^0.1.3",
-    "gulp-cssnano": "^2.1.0",
-    "gulp-filter": "*",
-    "gulp-imagemin": "^3.4.0",
-    "gulp-notify": "*",
-    "gulp-pixrem": "^1.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.3.0",
-    "gulp-rename": "*",
-    "gulp-replace": "^0.5.4",
-    "gulp-s3-publish": "^2.0.0",
-    "gulp-sass": "*",
-    "gulp-sort": "^1.1.1",
-    "gulp-sourcemaps": "*",
-    "gulp-uglify": "*",
-    "gulp-wp-pot": "^1.1.1",
-    "gulp-zip": "*"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"No test specified\""
-  },
+  "version": "1.0.0",
+  "description": "Genesis starter theme with a modern development workflow.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/seothemes/minimize"
+    "url": "https://github.com/seothemes/minimize.git"
   },
-  "keywords": [
-    "theme"
-  ],
-  "author": "SeoThemes",
-  "license": "GPL-2.0",
-  "bugs": {
-    "url": "https://github.com/seothemes/minimize/issues"
+  "author": "SEO Themes",
+  "license": "GPL-3.0-or-later",
+  "main": "Gulpfile.js",
+  "scripts": {},
+  "dependencies": {},
+  "devDependencies": {
+    "bourbon": "^5.1.0",
+    "gridkit": "^1.0.0",
+    "gulp": "^3.9.1",
+    "gulp-src-ordered-globs": "^1.0.3",
+    "gulp-wp-toolkit": "^2.3.2",
+    "gulp-zip": "^4.1.0",
+    "mqkit": "^1.0.3",
+    "prettier": "^1.13.4",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-config-wordpress": "^13.1.0",
+    "stylelint-order": "^0.8.1"
   },
-  "homepage": "https://github.com/seothemes/minimize"
+  "theme": {
+    "name": "Minimize",
+    "uri": "https://seothemes.com/minimize/",
+    "authoruri": "https://seothemes.com",
+    "licenseuri": "http://www.gnu.org/licenses/gpl-2.0.html",
+    "domainpath": "/languages",
+    "textdomain": "minimize",
+    "template": "genesis",
+    "tags": "one-column, two-columns, left-sidebar, right-sidebar, accessibility-ready, custom-logo, custom-background, custom-colors, custom-header, custom-menu, featured-images, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready"
+  }
 }
